# text-algorithms

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
src/: main.py
src/api/v1/: dependencies.py  schemas.py
src/api/v1/routers/: endpoints.py
src/application/: services.py
src/domain/: analysis.py
